<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/nav_dir"
        android:icon="@drawable/directory"
        android:title="@string/faculty_staff_directory"/>

    <item
        android:id="@+id/nav_course"
        android:icon="@drawable/course"
        android:title="@string/courses"/>

    <item
        android:id="@+id/nav_adm"
        android:icon="@drawable/baseline_app_registration_24"
        android:title="@string/admissions"/>

    <item android:title="Social Handle">
        <menu>
            <item
                android:id="@+id/nav_smedia"
                android:icon="@drawable/ig"
                android:title="@string/social_media"/>

            <item
                android:id="@+id/nav_etab"
                android:icon="@drawable/baseline_email_24"
                android:title="@string/email_fab"/>
        </menu>
    </item>




</menu>